--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Classificação F1</title>
+    <title>F1 Stats - by Ryan Paiva</title>
   </head>
   <body>
 
